@@ -40,6 +40,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5099: subprocess.Popen.__del__ no longer references global objects
+  to prevent issues during interpreter shutdown.
+
 - Issue #8681: Make the zlib module's error messages more informative when
   the zlib itself doesn't give any detailed explanation.
 
